# premiumize-explorer

./: CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: linux-appimage.yml  windows.yml
cmake/: CompilerWarnings.cmake  FetchDependencies.cmake
docs/: api.html  index.html
src/: CMakeLists.txt  main.cpp
src/api/: ApiTypes.cpp  ApiTypes.hpp  PremiumizeApi.cpp  PremiumizeApi.hpp
src/config/: AppConfig.cpp  AppConfig.hpp
src/model/: PremiumizeModel.cpp  PremiumizeModel.hpp  UpEntryProxyModel.cpp  UpEntryProxyModel.hpp
src/resources/: resources.qrc
src/transfer/: DownloadJob.cpp  DownloadJob.hpp  TransferManager.cpp  TransferManager.hpp  UploadJob.cpp  UploadJob.hpp
src/ui/: ApiKeyDialog.cpp  ApiKeyDialog.hpp  BatchDownloadWizard.cpp  BatchDownloadWizard.hpp  CloudTransfersWindow.cpp  CloudTransfersWindow.hpp  CreateFolderDialog.cpp  CreateFolderDialog.hpp  FilePane.cpp  FilePane.hpp  FormatHelpers.hpp  LogWindow.cpp  LogWindow.hpp  MainWindow.cpp  MainWindow.hpp  TransferProgressWindow.cpp  TransferProgressWindow.hpp
