cmake_minimum_required(VERSION 3.21)
project(premiumize-explorer VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(PMEX_ENABLE_ASAN "Enable AddressSanitizer" OFF)

include(cmake/CompilerWarnings.cmake)
include(cmake/FetchDependencies.cmake)

find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets Network Svg)
qt6_standard_project_setup()

add_subdirectory(src)
